# ttt_docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
_assets/css/: extra.css
about/: index.html
autotext/: index.html
aux-tools/: index.html
capps/: index.html
capps/langtags/: index.html
capps/memoryln/: index.html
capps/memoryln_tm_mngmt/: index.html
capps/veryfire/: index.html
capps/vf4ta/: index.html
capps/xdiff/: index.html
capps/xdiff_automation/: index.html
code/: md2html.py  share_docs.sh
docs/: README.md  about.md  autotext.md  aux-tools.md  hidden.md  index.md  nbsp.md  omegat.md
docs/capps/: langtags.md  memoryln.md  memoryln_tm_mngmt.md  veryfire.md  vf4ta.md  xdiff.md  xdiff_automation.md
docs/i18n/: authoring-tips.md  flip-plus.md  hyphenation.md  ssmc.md  trend_math_cg_6b.md  wrapping.md  xliff-prepp-best-practices.md  xliff-segmentation.md  xliff.md
docs/omegat/: building.md  nbsp.md  scripts.md  team_projects.md
docs/pisa25/: index.md  trainings.md
docs/projects/: index.md
docs/share/: hyphenation.html  (+6 more)
hidden/: index.html
i18n/: index.html
nbsp/: index.html
omegat/: index.html
profiles/: index.html
projects/: index.html
search/: search_index.json
share/: 404.html  hyphenation.html  index.html  recency.html  sitemap.xml  word-count-analysis-discrepancies.html  wrapping.html  xliff-prepp-best-practices.html  xliff-segmentation.html  xls2tmx.html
share-gh-plain-md/: index.html  mapping.txt  recency.html
stylesheets/: extra.css
tech/: index.html
tools/: index.html
(+207 files in other folders)
