[tool.poetry]
name = "ttt-docs"
version = "0.1.0"
description = "cApStAn's TTT docs"
authors = ["msoutopico <m.soutopico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.1.16"
material = "^0.1"
mkdocs = "^1.4.3"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-github = "^0.0.6"
mkdocs-gitbook = "^0.0.1"
mkdocs-custommill = "^1.3.0"
mkdocs-darkcinder = "^0.0.2"
mkdocs-theme-bootstrap4 = "^0.4.0"
mkdocs-dracula-theme = "^1.0.5"
mkdocs-windmill = "^1.0.5"
mkdocs-ansible = "^0.1.6"
mkdocs-encryptcontent-plugin = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
