[tool.poetry]
name = "ttt-docs"
version = "0.1.0"
description = "cApStAn's TTT docs"
authors = ["msoutopico <m.soutopico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.1.16"
material = "^0.1"
mkdocs = "^1.4.3"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-github = "^0.0.6"
mkdocs-gitbook = "^0.0.1"
mkdocs-custommill = "^1.3.0"
mkdocs-darkcinder = "^0.0.2"
mkdocs-theme-bootstrap4 = "^0.4.0"
mkdocs-dracula-theme = "^1.0.5"
mkdocs-windmill = "^1.0.5"
mkdocs-ansible = "^0.1.6"
mkdocs-encryptcontent-plugin = "^3.0.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-exclude-search = "^0.6.6"
markdown = "^3.5.2"
rich = "^13.7.1"
md-to-html = "^0.7.3"
misaka = "^2.1.1"
tomark = "^0.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
